append popper to body - fixes some z-indexing issues

--- a/src/_common/popper/popover/popover.styl
+++ b/src/_common/popper/popover/popover.styl
@@ -107,7 +107,7 @@ $-transition-time = 200ms
 		margin-top: $popover-spacing
 		margin-bottom: $popover-spacing
 
-/* .popper-heading
-padding: $popover-spacing
-white-space: nowrap
-font-weight: bold */
+.popper-heading
+	padding: $popover-spacing
+	white-space: nowrap
+	font-weight: bold
